--- a/blogs/_config.yml
+++ b/blogs/_config.yml
@@ -57,7 +57,8 @@ highlight:
   auto_detect: false
   tab_replace: ''
   wrap: true
-  hljs: false
+  hljs: true
+  first_line: 1
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
