add markdown support language

--- a/blogs/_config.yml
+++ b/blogs/_config.yml
@@ -58,7 +58,7 @@ highlight:
   tab_replace: ''
   wrap: true
   hljs: true
-  first_line: 1
+  #first_line: 1
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
