--- a/blogs/_config.yml
+++ b/blogs/_config.yml
@@ -54,10 +54,10 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
+  auto_detect: true
   tab_replace: ''
-  wrap: true
-  hljs: true
+  wrap: false
+  #hljs: false
   #first_line: 1
 
 # Home page setting
